18/10/2021 SO-Process Tran

--- a/Purnima/Week 2/Sales Organisation/RPA Samples/RS_Open Website.xaml
+++ b/Purnima/Week 2/Sales Organisation/RPA Samples/RS_Open Website.xaml
@@ -5,7 +5,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>652.666666666667,466</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>672,344</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>RS_Open_Website_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
